[gd_scene load_steps=14 format=3 uid="uid://bhvrla6g275uy"]

[ext_resource type="Script" path="res://script/fight/Fight.gd" id="1_0rvy3"]
[ext_resource type="Texture2D" uid="uid://c43i5hrrhawi6" path="res://assets/backgrounds/background1.png" id="2_1lg06"]
[ext_resource type="PackedScene" uid="uid://sw52nar1no4d" path="res://sence/fight/object/base.tscn" id="3_jxcqd"]
[ext_resource type="Texture2D" uid="uid://c6o27yerkolvm" path="res://assets/objects/baseVillage.png" id="4_8miln"]
[ext_resource type="PackedScene" uid="uid://cnnifqydayh65" path="res://sence/fight/ui/card.tscn" id="6_4unhj"]
[ext_resource type="Texture2D" uid="uid://cyrd7ii3pyc0" path="res://assets/objects/attackBoss.png" id="6_gbug6"]
[ext_resource type="Texture2D" uid="uid://dk8yspmeqggbm" path="res://assets/UI/button/stop_normal.png" id="6_q5rai"]
[ext_resource type="PackedScene" uid="uid://cimi287socn0s" path="res://sence/fight/ui/choiceCard.tscn" id="6_qxmrc"]
[ext_resource type="Texture2D" uid="uid://btaq2lqnicsn" path="res://assets/UI/button/stop_press.png" id="7_a3cl8"]
[ext_resource type="Texture2D" uid="uid://sk6iax281aah" path="res://assets/backgrounds/background1Buttom.png" id="8_qc2hl"]
[ext_resource type="Script" path="res://script/fight/ui/stopButton.gd" id="9_eg3an"]
[ext_resource type="PackedScene" uid="uid://bkq2jinug2gf7" path="res://sence/fight/ui/stopWindow.tscn" id="10_jfeyj"]
[ext_resource type="PackedScene" uid="uid://8lvpjn1tlm2g" path="res://sence/fight/object/boss.tscn" id="12_jn8mm"]

[node name="Fight" type="Node2D"]
process_mode = 1
script = ExtResource("1_0rvy3")

[node name="backGround" type="TextureRect" parent="."]
offset_right = 835.0
offset_bottom = 450.0
texture = ExtResource("2_1lg06")
metadata/_edit_lock_ = true
metadata/_edit_group_ = true

[node name="baseVillage" parent="." instance=ExtResource("3_jxcqd")]
position = Vector2(72, 258)
texture = ExtResource("4_8miln")

[node name="baseMonster" parent="." instance=ExtResource("3_jxcqd")]
position = Vector2(780, 263)

[node name="bossProtect" parent="." instance=ExtResource("3_jxcqd")]
position = Vector2(800, 188)
texture = ExtResource("6_gbug6")

[node name="Boss" parent="." instance=ExtResource("12_jn8mm")]
position = Vector2(760, 291)

[node name="monsterShow" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 400.0
offset_top = 262.0
offset_right = 465.0
offset_bottom = 283.0

[node name="HBoxContainer" type="HBoxContainer" parent="monsterShow"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
theme_override_constants/separation = 4

[node name="mShow1" type="TextureRect" parent="monsterShow/HBoxContainer"]
layout_mode = 2

[node name="mShow2" type="TextureRect" parent="monsterShow/HBoxContainer"]
layout_mode = 2

[node name="mShow3" type="TextureRect" parent="monsterShow/HBoxContainer"]
layout_mode = 2

[node name="mShow4" type="TextureRect" parent="monsterShow/HBoxContainer"]
layout_mode = 2

[node name="mShow5" type="TextureRect" parent="monsterShow/HBoxContainer"]
layout_mode = 2

[node name="mShow6" type="TextureRect" parent="monsterShow/HBoxContainer"]
layout_mode = 2

[node name="mShow7" type="TextureRect" parent="monsterShow/HBoxContainer"]
layout_mode = 2

[node name="Timer" type="Node" parent="."]

[node name="Thundertimer" type="Timer" parent="Timer"]
one_shot = true

[node name="CaveTimer" type="Timer" parent="Timer"]
one_shot = true

[node name="attackTimer" type="Timer" parent="Timer"]

[node name="Moneytimer" type="Timer" parent="Timer"]
wait_time = 0.5

[node name="Timer" type="Timer" parent="Timer"]

[node name="Spacetext" type="Label" parent="."]
visible = false
offset_left = 11.0
offset_top = 388.0
offset_right = 57.0
offset_bottom = 414.0
text = "Space"
metadata/_edit_lock_ = true
metadata/_edit_group_ = true

[node name="Spacecount" type="Label" parent="Spacetext"]
layout_mode = 0
offset_left = -1.0
offset_top = 22.0
offset_right = 39.0
offset_bottom = 48.0
text = "1"

[node name="position" type="Node2D" parent="."]

[node name="MonsterPoint" type="Marker2D" parent="position"]
position = Vector2(780, 297)
metadata/_edit_group_ = true
metadata/_edit_lock_ = true

[node name="VillagePoint" type="Marker2D" parent="position"]
position = Vector2(110, 297)
metadata/_edit_group_ = true
metadata/_edit_lock_ = true

[node name="sky" type="Marker2D" parent="position"]
position = Vector2(0, 120)
metadata/_edit_lock_ = true
metadata/_edit_group_ = true

[node name="ground" type="Marker2D" parent="position"]
position = Vector2(0, 318)
metadata/_edit_lock_ = true
metadata/_edit_group_ = true

[node name="bossStop" type="Marker2D" parent="position"]
position = Vector2(540, 298)
gizmo_extents = 40.0

[node name="bossPos" type="Marker2D" parent="position"]
position = Vector2(700, 302)
gizmo_extents = 40.0

[node name="towerArea" type="ColorRect" parent="."]
offset_left = 148.0
offset_top = 286.0
offset_right = 348.0
offset_bottom = 318.0
color = Color(0, 0, 0, 0.313726)
metadata/_edit_lock_ = true
metadata/_edit_group_ = true

[node name="monnsterTowerArea" type="ColorRect" parent="."]
visible = false
offset_left = 540.0
offset_top = 286.0
offset_right = 740.0
offset_bottom = 318.0
color = Color(0, 0, 0, 0.313726)
metadata/_edit_lock_ = true
metadata/_edit_group_ = true

[node name="skillArea" type="ColorRect" parent="."]
offset_left = 148.0
offset_top = 286.0
offset_right = 748.0
offset_bottom = 318.0
color = Color(0, 0, 0, 0.313726)
metadata/_edit_lock_ = true
metadata/_edit_group_ = true

[node name="Up" type="CanvasLayer" parent="."]

[node name="buttom1" type="TextureRect" parent="Up"]
offset_top = 312.0
offset_right = 835.0
offset_bottom = 450.0
texture = ExtResource("8_qc2hl")

[node name="StopButton" type="TextureButton" parent="Up"]
offset_left = 767.0
offset_top = 21.0
offset_right = 787.0
offset_bottom = 41.0
texture_normal = ExtResource("6_q5rai")
texture_pressed = ExtResource("7_a3cl8")
texture_hover = ExtResource("7_a3cl8")
script = ExtResource("9_eg3an")

[node name="card" parent="Up" instance=ExtResource("6_4unhj")]
offset_left = 96.0
offset_top = 352.0
offset_right = 96.0
offset_bottom = 352.0

[node name="choiceCard" parent="Up" instance=ExtResource("6_qxmrc")]
visible = false
offset_left = 58.0
offset_top = 19.0
offset_right = 58.0
offset_bottom = 19.0

[node name="Moneytext" type="Label" parent="Up"]
process_mode = 1
offset_left = 9.0
offset_top = 351.0
offset_right = 62.0
offset_bottom = 377.0
text = "Money"
metadata/_edit_lock_ = true
metadata/_edit_group_ = true

[node name="Moneycount" type="Label" parent="Up/Moneytext"]
layout_mode = 0
offset_top = 18.0
offset_right = 40.0
offset_bottom = 44.0
text = "1"

[node name="AttackTime" type="Label" parent="Up"]
offset_left = 11.0
offset_top = 320.0
offset_right = 54.0
offset_bottom = 346.0
text = "Time:"
metadata/_edit_lock_ = true
metadata/_edit_group_ = true

[node name="AttackTimeValue" type="Label" parent="Up/AttackTime"]
layout_mode = 0
offset_left = 60.0
offset_right = 100.0
offset_bottom = 26.0
text = "1
"

[node name="TestTime" type="Label" parent="Up"]
offset_left = 9.0
offset_top = 388.0
offset_right = 48.0
offset_bottom = 414.0
text = "Time"

[node name="TestTimeValue" type="Label" parent="Up/TestTime"]
layout_mode = 0
offset_left = -4.0
offset_top = 22.0
offset_right = 36.0
offset_bottom = 48.0
text = "1"

[node name="Leveltext" type="Label" parent="Up"]
offset_right = 45.0
offset_bottom = 26.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Level:"

[node name="LeveltextValue" type="Label" parent="Up/Leveltext"]
layout_mode = 0
offset_left = 50.0
offset_right = 60.0
offset_bottom = 26.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "1"

[node name="StopWindow" parent="." instance=ExtResource("10_jfeyj")]
layer = 2
visible = false

[connection signal="tree_entered" from="." to="." method="_on_tree_entered"]
[connection signal="tree_exited" from="." to="." method="_on_tree_exited"]
[connection signal="timeout" from="Timer/Thundertimer" to="." method="_on_thundertimer_timeout"]
[connection signal="timeout" from="Timer/CaveTimer" to="." method="_on_cave_timer_timeout"]
[connection signal="timeout" from="Timer/attackTimer" to="." method="_on_attack_timer_timeout"]
[connection signal="timeout" from="Timer/Moneytimer" to="." method="_on_moneytimer_timeout"]
[connection signal="mouse_entered" from="Up/StopButton" to="Up/StopButton" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Up/StopButton" to="Up/StopButton" method="_on_mouse_exited"]
[connection signal="pressed" from="Up/StopButton" to="Up/StopButton" method="_on_pressed"]
[connection signal="tree_entered" from="Up/StopButton" to="Up/StopButton" method="_on_tree_entered"]
